Feat: update user information, control username already used and add cloudinary functionality
