# users/src/api/router/user.router.ts
@@ -1,9 +1,10 @@
 import UserService from "../../services/user-service";
 import database from "../../models/index";
 import { handleError, subscribeMessage } from "../../utils/index";
-import { NextFunction, Response, Request, Express } from "express";
+import { NextFunction, Response, Request } from "express";
 import auth from "../middlewares/auth.middleware";
 import { Channel } from "amqplib";
+import uploadToCloudinary from "../../utils/cloudinary/cloudinary";
 
 export default (app, channel: Channel) => {
 	const service = new UserService();
@@ -33,9 +34,9 @@ export default (app, channel: Channel) => {
 
 	app.get("/auth", auth, async (_req, res: Response) => {
 		try {
-			return res.status(200).json({ok: true, data: ''})
-		} catch(error) {
-			res.status(401).json({ok: false, msg: handleError(error)})
+			return res.status(200).json({ ok: true, data: "" });
+		} catch (error) {
+			res.status(401).json({ ok: false, msg: handleError(error) });
 		}
 	});
 
@@ -64,7 +65,18 @@ export default (app, channel: Channel) => {
 	app.patch(
 		"/user/:id",
 		auth,
-		async ({ params: { id }, body }: Request, res: Response, _next: NextFunction) => {
+		async (
+			{ params: { id }, user: { sub: userId }, body }: Request,
+			res: Response,
+			_next: NextFunction
+		) => {
+			if (id !== userId) return res.status(401).json({ ok: true, msg: "Not authorized" });
+
+			if (!body.image.includes("res.cloudinary.com")) {
+				const secureUrlCloudinary = await uploadToCloudinary(body.image);
+				body.image = secureUrlCloudinary;
+			}
+			
 			try {
 				const data = await service.update(database.User, id, body);
 				return res.status(200).json({ ok: true, data });
